# demand-forecast-analysis

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
artifacts/: demandforecast_tft_28D01M26Y_version_01.pth  demandforecast_tft_28D01M26Y_version_02.pth
artifacts/lightning_logs/lightning_logs/version_0/: events.out.tfevents.1769570599.cf6d1ad8d1e0.55.0  events.out.tfevents.1769665164.3146070ee466.55.0  hparams.yaml
artifacts/lightning_logs/lightning_logs/version_0/checkpoints/: epoch=13-step=8806.ckpt  epoch=4-step=3145.ckpt  epoch=8-step=5661.ckpt  epoch=9-step=6290.ckpt
artifacts/lightning_logs/version_0/: events.out.tfevents.1769571900.cf6d1ad8d1e0.55.1  events.out.tfevents.1769667188.3146070ee466.55.1
artifacts/lightning_logs/version_1/: events.out.tfevents.1769571952.cf6d1ad8d1e0.55.2  events.out.tfevents.1769667247.3146070ee466.55.2  hparams.yaml
src/core/demand/: functions.py
src/core/utils/: file_manager.py  general_analyzer.py  inverse_transformed_regressor.py  io.py  logger.py  outlier_detector.py  transformation_techniques.py  vizualizer.py
